--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,8 +28,8 @@ spring:
       
   servlet:
     multipart:
-      enabled: true
-      max-file-size: 2MB
+      enabled: true #사진 받겠다.
+      max-file-size: 2MB #용량 조절
 
   security:
     user:
@@ -37,4 +37,4 @@ spring:
       password: 1234   
 
 file:
-  path: C:/workspace/springbootwork/upload/
+  path: C:/Users/dai64/IdeaProjects/upload/
